--- a/bw/bw-spatial.qmd
+++ b/bw/bw-spatial.qmd
@@ -3,3 +3,33 @@ title: "Spatial Viz"
 ---
 
 Use this file to generate a professional looking **spatial** visualization.  The visualization will not perfect the first time but you are expected to improve on it throughout the semester especially after covering advanced topics such as effective viz.
+
+
+```{r}
+library(socviz)
+library(tidyverse)
+library(ggplot2)
+library(mosaic)
+library(viridis)
+
+data(county_map) 
+
+elections_by_counties <- read.csv("https://mac-stat.github.io/data/election_2020_county.csv")
+elections_by_counties <- elections_by_counties |> 
+  mutate(county_fips = as.character(county_fips)) |> 
+  mutate(county_fips = 
+           ifelse(nchar(county_fips) == 4, paste0("0", county_fips), county_fips))
+```
+
+```{r}
+ggplot(elections_by_counties, aes(map_id = county_fips, fill = median_rent)) +
+  geom_map(map = county_map) +
+  expand_limits(x = county_map$long, y = county_map$lat) +
+  theme_map() +
+  theme(legend.position = "right") + 
+  coord_equal() +
+  labs(title = "American Median Rent by County", caption = "Data from the mac-stat program", alt = "East and west coast counties tend to have much higher median rents than middle America, especially in California and Newyork.") +
+  scale_fill_viridis("Median Rent", option = "B", direction =  -1)
+```
+
+
