--- a/bw/bw-spatial.qmd
+++ b/bw/bw-spatial.qmd
@@ -1,11 +1,17 @@
 ---
 title: "Spatial Viz"
+excecute:
+  echo: true
+  warning: false
+  message: false
+  error: false
+format: 
+  html:
+    code-fold: true
 ---
 
-Use this file to generate a professional looking **spatial** visualization.  The visualization will not perfect the first time but you are expected to improve on it throughout the semester especially after covering advanced topics such as effective viz.
 
-
-```{r}
+```{r, echo=TRUE, warning=FALSE, message=FALSE, error=FALSE}
 library(socviz)
 library(tidyverse)
 library(ggplot2)
@@ -19,9 +25,7 @@ elections_by_counties <- elections_by_counties |>
   mutate(county_fips = as.character(county_fips)) |> 
   mutate(county_fips = 
            ifelse(nchar(county_fips) == 4, paste0("0", county_fips), county_fips))
-```
 
-```{r}
 ggplot(elections_by_counties, aes(map_id = county_fips, fill = median_rent)) +
   geom_map(map = county_map) +
   expand_limits(x = county_map$long, y = county_map$lat) +
